# infosci-spark-client

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
infosci_spark_client/: __init__.py  client.py
