[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infosci-spark-client"
version = "0.1.0"
description = "A simple Python client for the Information Science Department Spark API"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Peter Bidoshi", email = "pjb294@cornell.edu"}
]
keywords = ["llm", "api", "client", "infosci", "spark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/mrpeterss/infosci-spark-client"
Documentation = "https://github.com/mrpeterss/infosci-spark-client#readme"
Repository = "https://github.com/mrpeterss/infosci-spark-client"
Issues = "https://github.com/mrpeterss/infosci-spark-client/issues"

[tool.setuptools]
packages = {find = {where = ["."]}}

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]
